# dsba-ads-lect8

./: README.md
src/: CMakeLists.txt
src/ex1_copyelision/: main.cpp
src/ex2_lrvalues/: main.cpp
src/ex3_move/: main.cpp  safe_array.hpp
src/ex4_delete_def/: main.cpp
